<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="#FFF5FC"
  tools:context="com.ananda.post_3_pmob.MainActivity">
  
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    >
    <TextView
      android:id="@+id/title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/form_pendaftaran"
      android:textAlignment="center"
      android:textColor="@color/blue"
      android:textSize="22sp"
      android:textStyle="bold"
      android:layout_marginBottom="20dp"
      android:background="@color/ungu"
      android:padding="10dp"
      />
    
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/full_name"
      android:textStyle="bold"
      />
    
    <EditText
      android:id="@+id/fullName"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/enter_yout_full_name"
      android:importantForAutofill="no"
      android:inputType="textPersonName"
      android:background="@drawable/edittext_rounded"
      android:padding="12dp"
      android:layout_marginBottom="10dp"
      />
    
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/username"
      android:textStyle="bold"
      />
    
    <EditText
      android:id="@+id/username"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/enter_your_username"
      android:inputType="textPersonName"
      android:background="@drawable/edittext_rounded"
      android:padding="12dp"
      android:layout_marginBottom="10dp"
      />
    
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/age"
      android:textStyle="bold"
      />
  
    <EditText
      android:id="@+id/age"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/enter_your_age"
      android:inputType="number"
      android:background="@drawable/edittext_rounded"
      android:padding="12dp"
      android:layout_marginBottom="10dp"
      />
    
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/email"
      android:textStyle="bold"
      />
    
    <EditText
      android:id="@+id/email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/enter_your_email_address"
      android:inputType="textEmailAddress"
      android:background="@drawable/edittext_rounded"
      android:padding="12dp"
      android:layout_marginBottom="10dp"
      />
    
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/gender"
      android:textStyle="bold"
      />
    
    <RadioGroup
      android:id="@+id/gender"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginBottom="10dp">
      
      <RadioButton
        android:id="@+id/male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/laki_laki" />
      
      <RadioButton
        android:id="@+id/female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perempuan"
        android:layout_marginStart="20dp" />
      
    </RadioGroup>
    
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/password"
      android:textStyle="bold" />
    
    <EditText
      android:id="@+id/password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/enter_your_password"
      android:inputType="textPassword"
      android:background="@drawable/edittext_rounded"
      android:padding="12dp"
      android:layout_marginBottom="10dp" />
    
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/confirm_password"
      android:textStyle="bold" />
    
    <EditText
      android:id="@+id/confirmPassword"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/re_enter_your_password"
      android:inputType="textPassword"
      android:background="@drawable/edittext_rounded"
      android:padding="12dp"
      android:layout_marginBottom="20dp" />
    
    <Button
      android:id="@+id/btnSubmit"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/submit"
      android:textAllCaps="false"
      android:textStyle="bold"
      android:textColor="#FFFFFF"
      android:backgroundTint="#2196F3"
      android:layout_marginBottom="20dp"
      android:padding="10dp" />
  
  
  </LinearLayout>
  
</ScrollView>