<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="20dp"
  android:background="@color/white"
  tools:context="com.ananda.post_3_pmob.ActivityResult">
  
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    
    <TextView
      android:id="@+id/titleResult"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/registration_result"
      android:textAlignment="center"
      android:textColor="@color/black"
      android:textSize="22sp"
      android:textStyle="bold"
      android:background="@color/white"
      android:padding="10dp"
      android:layout_marginBottom="20dp" />
    
    <TextView
      android:id="@+id/fullNameResult"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/full_name_result"
      android:textSize="16sp"
      android:textStyle="bold"
      android:layout_marginBottom="5dp"/>
    
    <TextView
      android:id="@+id/usernameResult"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/username_result"
      android:textSize="16sp"
      android:textStyle="bold"
      android:layout_marginTop="10dp"
      android:layout_marginBottom="5dp" />
    
    <TextView
      android:id="@+id/ageResult"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/age_result"
      android:textSize="16sp"
      android:textStyle="bold"
      android:layout_marginTop="10dp"
      android:layout_marginBottom="5dp" />
    
    <TextView
      android:id="@+id/emailResult"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/email_result"
      android:textSize="16sp"
      android:textStyle="bold"
      android:layout_marginTop="10dp"
      android:layout_marginBottom="5dp" />
    
    <TextView
      android:id="@+id/genderResult"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/gender_result"
      android:textSize="16sp"
      android:textStyle="bold"
      android:layout_marginTop="10dp"
      android:layout_marginBottom="5dp" />
    
  </LinearLayout>
  
</ScrollView>



